Migrate Order Service unit tests to JUnit 5 and Jakarta EE
- Replace JUnit 4 annotations with JUnit 5 equivalents
- Update javax.annotation to jakarta.annotation
- Update Mockito.Matchers to Mockito.ArgumentMatchers
- Update RestaurantMother to use domain classes instead of event stubs
- Update CreateOrderSagaTest to use constructor-based command creation
- All unit tests pass

Co-authored by Claude Code