@@ -5,8 +5,8 @@ import net.chrisrichardson.ftgo.common.CommonJsonMapperInitializer;
 import net.chrisrichardson.ftgo.orderservice.OrderDetailsMother;
 import net.chrisrichardson.ftgo.orderservice.domain.OrderRepository;
 import net.chrisrichardson.ftgo.orderservice.domain.OrderService;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.test.web.servlet.setup.StandaloneMockMvcBuilder;
@@ -26,7 +26,7 @@ public class OrderControllerTest {
   private OrderRepository orderRepository;
   private OrderController orderController;
 
-  @Before
+  @BeforeEach
   public void setUp() {
     orderService = mock(OrderService.class);
     orderRepository = mock(OrderRepository.class);
@@ -45,7 +45,7 @@ public class OrderControllerTest {
             get("/orders/1").
     then().
             statusCode(200).
-            body("orderId", equalTo(new Long(OrderDetailsMother.ORDER_ID).intValue())).
+            body("orderId", equalTo(Long.valueOf(OrderDetailsMother.ORDER_ID).intValue())).
             body("state", equalTo(OrderDetailsMother.CHICKEN_VINDALOO_ORDER_STATE.name())).
             body("orderTotal", equalTo(CHICKEN_VINDALOO_ORDER_TOTAL.asString()))
     ;
